# autograder

./: .gitignore  CLAUDE.md  LICENSE  README.md  TEST_PLAN_CODEX.md  ag.py  autograder.py  complete.bash  config.json  config.toml  flake.nix  grade  pyproject.toml  requirements.txt
actions/: canvas.py  cmd.py  config.py  dates.py  git.py  github.py  import_students.py  importer.py  rollup.py  server.py  setup.py  test.py  upload.py  util.py
example_tests/project02/: project02.toml
src/autograder/: grade.py
src/autograder/actions/: __init__.py  canvas.py  cmd.py  config.py  dates.py  git.py  github.py  rollup.py  server.py  test.py  upload.py
tests/: __init__.py  conftest.py  helpers.py  lab06.json  project02.json  project02.toml  project03.json  project03.toml  project04.json  test_cmd.py  test_config.py  test_dates_rollup.py  test_git_github_server.py  test_grade_cli.py  test_testcase_and_runner.py  test_util.py
tests/project02/: project02.toml
tests/project03/: project03.toml
tests/project04/: b0.s  b1.s  cmp.s  cmpi.s  dp2.s  dp2i.s  dp3.s  dp3i.s  lsi.s  memi.s  project04.toml  quadratic_s.s  reverse_s.s
tests/project06/: factorial.dig  project06.toml  quadratic.dig  search.dig  sum-array.dig
