[project]
name = "autograder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi",
    "charset-normalizer",
    "idna",
    "requests",
    "tomlkit",
    "urllib3",
]

[project.scripts]
grade = "autograder.grade:main" # `uv run grade`
