[project]
name = "autograder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "certifi==2022.6.15",
    "charset-normalizer==2.1.0",
    "idna==3.3",
    "pep8>=1.7.1",
    "pylint>=3.3.7",
    "requests==2.28.1",
    "simple-term-menu>=1.6.6",
    "tomlkit==0.11.1",
    "urllib3==1.26.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore:cannot collect test class 'Test':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestCase':pytest.PytestCollectionWarning",
]
