[project]
name = "autograder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8",
    "certifi",
    "charset-normalizer",
    "idna",
    "pep8",
    "pylint",
    "requests",
    "simple-term-menu",
    "tomlkit",
    "urllib3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore:cannot collect test class 'Test':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestCase':pytest.PytestCollectionWarning",
]

[project.scripts]
grade = "autograder.grade:main" # `uv run grade`

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
    "ignore:cannot collect test class 'Test':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestCase':pytest.PytestCollectionWarning",
]
